--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "cors": "^2.8.5",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "express": "^4.17.1",
